# rustapi

./: .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  build.rs  build.sh  build_push.sh  openiap.sln  rust-toolchain.toml  shell.nix  win.nix
.cargo/: config.toml
.cargo.old/: config.toml
.claude/: settings.local.json
.devcontainer/: devcontainer.json
c/: .gitignore  Makefile  README.md  clib_openiap.h  conanfile.py  env.nix  main.c  shell.nix
c/test_package/: main.c
crates/bootstrap/: Cargo.toml
crates/bootstrap/src/: lib2.rs  main.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/clib/: Cargo.toml  README.md  build.rs  clib_openiap.h
crates/clib/src/: lib.rs  safe_wrappers.rs  tests.rs
crates/client/: Cargo.toml  README.md
crates/client/src/: grpc.rs  lib.rs  otel.rs  tests.rs  util.rs  ws.rs
crates/napi/: Cargo.toml  build.rs  index.d.ts  index.js  package.json
crates/napi/src/: lib.rs
crates/openiap-napi-postbuild/: Cargo.toml  build.rs
crates/proto/: Cargo.toml  README.md  build.rs
crates/proto/proto/: base.proto  stripe.proto
crates/proto/src/: agent.rs  base.rs  download.rs  errors.rs  lib.rs  openiap.rs  query.rs  queue.rs  signin.rs  upload.rs  workitem.rs
dotnet/: .gitignore  AsyncHandler.cs  CallbackRegistry.cs  Client.cs  Program.cs  README.md  env.nix  make  openiap-slim.csproj  openiap.csproj  openiap.nuspec  openiap.sln  runtimeconfig.template.json  shell.nix  test.cs
go/: .gitignore  README.md  clib_openiap.h  env.nix  go.mod  openiap.go  shell.nix
go/cmd/cli/: cli.go
java/: .gitignore  README.md  env.nix  pom.xml  shell.nix
java/src/main/java/io/openiap/: AggregateParameters.java  AggregateResponseWrapper.java  BooleanTypeMapper.java  Bootstrap.java  ClibOpenIAP.java  Client.java  ClientEvent.java  ClientEventResponseWrapper.java  ClientEventWrapper.java  ColCollationWrapper.java  ColTimeseriesWrapper.java  Collection.java  ConnectResponseWrapper.java  CountParameters.java  CountResponseWrapper.java  CreateCollection.java  CreateCollectionResponseWrapper.java  CreateIndexParameters.java  CreateIndexResponseWrapper.java  CustomCommandParameters.java  CustomCommandResponseWrapper.java  DeleteManyParameters.java  DeleteManyResponseWrapper.java  DeleteOneParameters.java  DeleteOneResponseWrapper.java  DeleteWorkitem.java  DeleteWorkitemResponseWrapper.java  DistinctParameters.java  DistinctResponseWrapper.java  DownloadParameters.java  DownloadResponseWrapper.java  DropCollectionResponseWrapper.java  DropIndexResponseWrapper.java  GetIndexesResponseWrapper.java  Index.java  InsertManyParameters.java  InsertOneParameters.java  InsertOrUpdateOneParameters.java  InvokeOpenRPAParameters.java  InvokeOpenRPAResponseWrapper.java  (+42 more)
node/: .gitignore  .npmignore  README.md  cli.js  env.nix  install.js  lib copy.js  lib.d.ts  lib.d.ts.map  lib.js  main.js  make  package-lock.json  package.json  shell.nix  test.js  tsconfig.json
php/: .gitignore  README.md  composer.json  env.nix  nix.shell  shell.nix
php/examples/: cli.php  test.php
php/src/: Client.php  clib_openiap.h  lib.php  main.php  timer.php
proto/: ace.proto  agent.proto  querys.proto  queues.proto  watch.proto  workitems.proto
pwsh/: env.nix  shell.nix
pwsh/openiap/: README.md  bootstrap.ps1  env.nix  openiap.psd1  openiap.psm1  test.ps1
python/: .gitignore  README.md  cli.py  env.nix  env2.nix  make  pyproject.toml  setup.py  shell.nix  test.py
python/openiap/: __init__.py  main.py
src/: async_channel.rs  lib.rs  main.rs
src/client/: download.rs  errors.rs  mod.rs  query.rs  queue.rs  signin.rs  upload.rs
