[package]
name = "openiap"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
tonic = { version = "0.12.0", features = ["tls-roots"] } # "transport", "gzip", "tls", "tls-webpki-roots"
futures = "0.3"
prost = "0.13.1"
prost-types = "0.13.1"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] } # "rt", "macros"
tokio-stream = "0.1.15"
tracing = { version = "0.1", features = ["log", "attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["std", "env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"                
url = "2.5.2"
# cargo tree -p ring -i
# ring = { git = "https://github.com/awakecoding/ring", branch = "0.16.20_alpha" }

#https://github.com/briansmith/ring/issues/1167#ref-issue-1832977660
#[patch.crates-io]
#ring = { git = "https://github.com/briansmith/ring", branch = "main" }

[build-dependencies]
tonic-build = "0.12.0"
