[package]
name = "openiap"
description = "openiap test client"
license = "MPL-2.0"
version = "0.0.10"
edition = "2021"

[dependencies]
openiap-client = { path = "../client", version = "0.0.10" }
# tokio = { version = "1.38.0", features = ["rt-multi-thread"] } # "fs", "rt", "macros"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1.15"
lazy_static = "1.5.0"

# [target.'cfg(not(target_env = "msvc"))'.dependencies]
# tikv-jemallocator = { version = "0.6.0", features = ["profiling", "stats"] }
# tikv-jemalloc-ctl = { version = "0.6.0", features = ["profiling", "stats"] }