[package]
name = "openiap"
description = "openiap test client"
license = "MPL-2.0"
version = "0.0.14"
edition = "2021"

[dependencies]
openiap-client = { path = "../client", version = "0.0" }
tokio = { version = "1.41.0", features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1.16" }
lazy_static = { version = "1.5.0" }

# [target.'cfg(not(target_env = "msvc"))'.dependencies]
# tikv-jemallocator = { version = "0.6.0", features = ["profiling", "stats"] }
# tikv-jemalloc-ctl = { version = "0.6.0", features = ["profiling", "stats"] }