[package]
name = "openiap-clib"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
openiap-client = { path = "../client" }
tokio = { version = "1.38.0", features = ["rt-multi-thread"] } # "fs", "rt", "macros"
tracing = { version = "0.1", features = ["log", "attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["std", "env-filter", "json"] }
serde_json = "1.0.120"                
