[package]
name = "openiap-clib"
description = "openiap client c library for SDK wrappers"
license = "MPL-2.0"
version = "0.0.13"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
openiap-client = { path = "../client", version = "0.0" }
# tokio = { version = "1.38.0", features = ["rt-multi-thread"] } # "fs", "rt", "macros"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tracing = { version = "0.1", features = ["log", "attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["std", "env-filter", "json"] }
lazy_static = "1.5.0"