[package]
name = "openiap-client"
description = "openiap client library"
license = "MPL-2.0"
version = "0.0.4"
edition = "2021"

[dependencies]
openiap-proto = { path = "../proto", version = "0.0.4" }
tonic = { version = "0.12.0", features = ["tls-roots"] } # "transport", "gzip", "tls", "tls-webpki-roots"
futures = "0.3"
prost = "0.13.1"
prost-types = "0.13.1"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] } # "fs", "rt", "macros"
tokio-stream = "0.1.15"
tracing = { version = "0.1.40", features = ["log", "attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["std", "env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
minreq = { version = "1.0", features = ["https"] }
url = "2.5.2"
# base64 = "0.22.1"
flate2 = "1.0.31"
lazy_static = "1.5.0"
opentelemetry = { version = "0.24.0"  }
opentelemetry_sdk = { version = "0.24.1", features = [ "rt-tokio", "async-std" ] }
opentelemetry-otlp = { version = "0.17.0", features = [ "metrics", "grpc-tonic", "tls-webpki-roots" ] }
# async-trait = "0.1.56"
# memory-stats = { version = "1.0.0", features = [ "always_use_statm" ] }
md5 = "0.7.0"
sysinfo = "0.29"
indexmap = "1.8"
hostname = "^0.4"

