[package]
name = "openiap-client"
description = "openiap client library"
license = "MPL-2.0"
version = "0.0.11"
edition = "2021"

[dependencies]
openiap-proto = { path = "../proto", version = "*" }
tonic = { version = "0.12.0", features = ["tls-roots"] } # "transport", "gzip", "tls", "tls-webpki-roots"
futures = "0.3"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
futures-channel = "0.3.28"
prost = "0.13.1"
prost-types = "0.13.1"
# tokio = { version = "1.38.0", features = ["rt-multi-thread"] } # "fs", "rt", "macros"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "tracing"] }
tokio-stream = "0.1.15"
tracing = { version = "0.1.40", features = ["log", "attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["std", "env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
minreq = { version = "2.12.0", features = ["https"] }
url = "2.5.2"
# base64 = "0.22.1"
flate2 = "1.0.31"
lazy_static = "1.5.0"
opentelemetry = { version = "0.24.0"  }
opentelemetry_sdk = { version = "0.24.1", features = [ "rt-tokio", "async-std" ] }
opentelemetry-otlp = { version = "0.17.0", features = [ "metrics", "grpc-tonic", "tls-webpki-roots" ] }
# async-trait = "0.1.56"
md5 = "0.7.0"
indexmap = "1.8"
hostname = "^0.4"

bytes = { version = "1.7.2" }
async-channel = { version = "2.3.1" }
tokio-tungstenite = { version = "0.24.0", features = [ "rustls-tls-native-roots" ] }
# tokio-tungstenite = { version = "0.24.0", features = [ "native-tls" ] }
sqids = "0.4.1"
# async-tungstenite = { version = "0.28.0", features = [ "async-native-tls" ] }
once_cell = "1.20.2"
# console-subscriber = "0.4.0"



perf_monitor = "0.2.1"
# perf_monitor = { version = "0.2.1", features = [ "allocation_counter" ] }
memory-stats = "1.2.0"
# memory-stats = { version = "1.0.0", features = [ "always_use_statm" ] }
systemstat = { version = "0.2.3" }
# sysinfo = { version = "0.32.0" }