[package]
name = "openiap-client"
description = "openiap client library"
license = "MPL-2.0"
version = "0.0.27"
edition = "2021"

[dependencies]
openiap-proto = { path = "../proto", version = "0.0" }
tonic = { version = "0.12.3", features = ["tls-roots"] } # "transport", "gzip", "tls", "tls-webpki-roots"
futures = { version = "0.3.31" }
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "std"] }
futures-channel = { version = "0.3.31" }
prost = { version = "0.13.3" }
prost-types = { version = "0.13.3" }
tokio = { version = "1.41.0", features = ["rt-multi-thread", "tracing"] }
tokio-stream = { version = "0.1.16" }
tracing = { version = "0.1.40", features = ["log", "attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["std", "env-filter", "json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = { version = "1.0.132" }
minreq = { version = "2.12.0", features = ["https"] }
url = { version = "2.5.3" }
flate2 = { version = "1.0.34" }
lazy_static = { version = "1.5.0" }
opentelemetry = { version = "0.28.0", optional = true, features = [ "logs" ] }
opentelemetry-appender-tracing = { version = "0.28.0", optional = true }
# opentelemetry_appender_log = { version = "0.28.0", optional = true }
opentelemetry_sdk = { version = "0.28.0", features = [ "rt-tokio", "async-std" ], optional = true }
opentelemetry-otlp = { version = "0.28.0", features = [ "metrics", "grpc-tonic", "tls-webpki-roots" ], optional = true }
md5 = { version = "0.7.0" }
indexmap = { version = "2.6.0" }
hostname = { version = "0.4.0" }

bytes = { version = "1.8.0" }
async-channel = { version = "2.3.1" }
tokio-tungstenite = { version = "0.24.0", features = [ "rustls-tls-native-roots" ] }
sqids = { version = "0.4.1" }
once_cell = { version = "1.20.2" }

perf_monitor = { version = "0.2.1" }
memory-stats = { version = "1.2.0" }
systemstat = { version = "0.2.3" }

[features]
# default = []
# default = ["otel_package_stats", "otel_commands", "otel_connections", "otel_elapsed"]
default = ["otel_memory", "otel_package_stats", "otel_commands", "otel_connections", "otel_elapsed"]
# default = ["otel_memory", "otel_package_stats", "otel_commands", "otel_connections", "otel_elapsed", "otel_cpu", "otel_network", "otel_disk"]
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:opentelemetry-appender-tracing"]
otel_memory = ["otel"]
otel_package_stats = ["otel"]
otel_commands = ["otel"]
otel_connections = ["otel"]
otel_elapsed = ["otel"]
otel_cpu = ["otel"]
otel_network = ["otel"]
otel_disk = ["otel"]