[package]
name = "openiap-proto"
description = "compiled protos for openiap"
license = "MPL-2.0"
version = "0.0.2"
edition = "2021"

[dependencies]
tonic =             { version = "0.12.0", features = ["tls-roots"] } # "transport", "gzip", "tls", "tls-webpki-roots"
prost =             { version = "0.13.1" }
prost-types =       { version = "0.13.1" }
serde =             { version = "1.0", features = ["derive"] }
serde_json =        { version = "1.0.120" }

[build-dependencies]
tonic-build =       { version = "0.12.0" }
