[package]
name = "openiap-proto"
description = "compiled protos for openiap"
license = "MPL-2.0"
version = "0.0.4"
edition = "2021"

[dependencies]
tonic =             { version = "0.12.0", features = ["tls-roots"] } # "transport", "gzip", "tls", "tls-webpki-roots"
prost =             { version = "0.13.1" }
prost-types =       { version = "0.13.1" }
tracing =           { version = "0.1", features = ["attributes"] }
# serde =             { version = "1.0" }

[build-dependencies]
tonic-build =       { version = "0.12.0" }
