[package]
name = "openiap-proto"
description = "compiled protos for openiap"
license = "MPL-2.0"
version = "0.0.35"
edition = "2021"

[dependencies]
tonic =             { version = "0.12.3", features = ["tls-roots"] } # "transport", "gzip", "tls", "tls-webpki-roots"
prost =             { version = "0.13.3" }
prost-types =       { version = "0.13.3" }
tracing =           { version = "0.1.40", features = ["attributes"] }
# serde =             { version = "1.0.214" }

[build-dependencies]
tonic-build =       { version = "0.12.3" }
